fixed ₽ wrap

--- a/index.scss
+++ b/index.scss
@@ -289,6 +289,11 @@ html {
 
             margin-top: 20px;
 
+            div{
+                display: inline-flex;
+                flex-wrap: nowrap;
+            }
+
             #add {
                 @extend .btn_animation_dark;
                 @extend .btn_animation_light;
